--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -4,6 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>CultureStay 로그인</title>
+    
+    <div id="google_translate_element" class="hd_lang" style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
+	
+	
+	<script>
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({
+				pageLanguage: 'en',
+				includedLanguages: 'ko,en,ja,zh-CN,fr',
+				//layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+				autoDisplay: false,
+				multilanguagePage: true
+			}, 'google_translate_element');
+		}
+	</script>
+	<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
