--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
 </head>
 <body>
 <h2>프로그램 신청화면</h2>
@@ -31,9 +32,23 @@
 	</div>
 		
 	<br>
+	<div class="checklist-container">
+	<!-- 게스트용 체크리스트 -->
+			<div>
+				<h3>게스트용 체크리스트</h3>
+				<label><input type="checkbox" name="petFriendly" value="1">반려동물 동반 여부 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="allergyFriendly" value="1">알러지 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="chronicIllness" value="1">지병 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="foodPreference" value="1">기피하는 음식 유무 (선호하는 식단 - 밥, 빵, 상관없음, 생략) (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="privateTime" value="1">개인시간 원하는지 여부 (방해받고 싶지 않은 시간: 주관식)</label>
+				<label><input type="checkbox" name="preferredProgramType" value="1">선호하는 프로그램 유형 (역사유적지탐방, 현지일상생활, 문화체험, 호스트와 생활)</label>
+				<label><input type="checkbox" name="languageSupport" value="1">언어대응 가능 여부 (예: 한국어, 영어)</label>
+				<label><input type="checkbox" name="smoking" value="1">흡연 유무 (흡연, 비흡연)</label>
+			</div>
+
 		<input type="submit" value="저장하기"> 
 
-
+</div>
 	</form>
 
 
