프로그램 조회 화면 구현 - css 정리

--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
 
 <link rel="stylesheet" th:href="@{/css/header_style.css}">
-<link rel="stylesheet" th:href="@{/css/main_style_write.css}">
+<link rel="stylesheet" th:href="@{/css/main/write.css}">
 <link rel="stylesheet" th:href="@{/css/footer.css}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <style>
