--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -43,25 +43,27 @@
 			</div>
 
 			<div class="reservation-container">
-				<div class="date-select">
-					<div class="dateinput" id="dateinput"></div>
+				<article class="reservation-article">
+					<div class="date-select">
+						<div class="dateinput" id="dateinput"></div>
 
-					<div>
-						<input type="text" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+						<div>
+							<input type="text" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+						</div>
+
+						<div>
+							<input type="text" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+						</div>
 					</div>
-			
-					<div>
-						<input type="text" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+
+					<div class="button-wrapper">
+						<button type="submit" class="btn-save">작성</button>
 					</div>
-				</div>
 
-				<div class="button-wrapper">
-					<button type="submit" class="btn-save">작성</button>
-				</div>
-
-				<div class="price-sum">
-					<p>price</p>
-				</div>
+					<div class="price-sum">
+						<p>price</p>
+					</div>
+				</article>
 			</div>
 		</div>
 		
