프로그램 조회 화면 구현 - 좋아요 북마크

--- a/src/main/resources/static/css/main/detail.css
+++ b/src/main/resources/static/css/main/detail.css
@@ -82,3 +82,7 @@ input[type="text"] {
 .like-bookmark-wrapper .mark {
     padding: 10px;
 }
+
+.clickable {
+    cursor: pointer; /* 마우스 호버 시 포인터 모양 변경 */
+}
