--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -5,11 +5,22 @@
 	<meta charset="UTF-8">
 	<title>조회</title>
 
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script th:src="@{/js/script.js}"></script>
+
+	<!-- 달력 daterangepicker -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
 	<link rel="stylesheet" th:href="@{/css/header_style.css}">
 	<link rel="stylesheet" th:href="@{/css/main/write.css}">
 	<link rel="stylesheet" th:href="@{/css/main/detail.css}">
 	<link rel="stylesheet" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+
 
 </head>
 <body>
@@ -65,11 +76,11 @@
 						<div class="dateinput" id="dateinput"></div>
 
 						<div>
-							<input type="text" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+							<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
 						</div>
 
 						<div>
-							<input type="text" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+							<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
 						</div>
 					</div>
 
