--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -9,8 +9,9 @@
 	<script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script th:src="@{/js/script.js}"></script>
 
-	<!-- 달력 -->
+	<!-- 달력 daterangepicker -->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
@@ -21,15 +22,7 @@
 	<link rel="stylesheet" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-	<script th:src="@{/js/script.js}"></script>
-	<style>
 
-	</style>
-	<script>
-
-
-
-	</script>
 </head>
 <body>
 
@@ -70,11 +63,11 @@
 		<div class="dateinput" id="dateinput"></div>
 
 		<div>
-			<input type="text" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+			<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
 		</div>
 
 		<div>
-			<input type="text" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+			<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
 		</div>
 
 		<br>
