--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -4,11 +4,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Home</title>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script th:src="@{/js/script.js}"></script>
+
+	<!-- 달력 daterangepicker -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
 	<link rel="stylesheet" th:href="@{/css/header_style.css}">
 	<link rel="stylesheet" th:href="@{/css/main/list.css}">
 	<link rel="stylesheet" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
 
 </head>
 <body>
@@ -26,11 +35,14 @@
 				<!-- 지역 입력란 -->
 				<input type="text" name="address" placeholder="지역 검색" aria-label="지역">
 
-				<!-- 체크인 날짜 선택 -->
-				<input type="date" name="start_date" aria-label="체크인 날짜">
+				<!-- 날짜 선택 -->
+				<input type="text" class="dateinput" id="dateinput" placeholder="날짜 선택"></input>
 
-				<!-- 체크아웃 날짜 선택 -->
-				<input type="date" name="end_date" aria-label="체크아웃 날짜">
+				<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"
+					   hidden="hidden"></input>
+
+				<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"
+					hidden="hidden"></input>
 
 				<!-- 프로그램 입력란 -->
 				<input type="text" name="searchWord" placeholder="프로그램 검색" aria-label="프로그램">
