--- a/src/main/resources/templates/member/updateForm.html
+++ b/src/main/resources/templates/member/updateForm.html
@@ -102,7 +102,7 @@ function checkValid(){
        <table>
           <tr>
              <th>아이디</th>
-             <td th:text="${member.userid}"></td>></td>
+             <td th:text="${member.userid}"></td></td>
              
           </tr>
           <tr>
