--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -17,18 +17,21 @@
 					 th:text="${program.title}"></a></td>
 		</tr>
 	</table>
+	
+<h4>예약상태(0:수락대기/1:수락완료/2:프로그램종료)<br> 2이면 리뷰쓰기 버튼 활성화</h4> 
 		
 <h3>예약현황</h3>		
+
 	<table>
 			<tr th:each="reservation: ${reservation}">	 
 			<th>프로그램 번호</th>
 			<td th:text="${reservation.programNum}"></td>
 			<td>
 				<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" 
-					th:text="new"></a>
+					th:text="accept"></a>
 			</td>
 			<td th:text="${reservation.inputdate}"></td>
-			<th>예약상태(0:수락대기/1:수락완료/2:프로그램종료)</th>
+			<th>예약상태</th>
 			<td th:text="${reservation.status}"></td>
 		</tr>
 	</table>
