--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -58,6 +58,13 @@
 
 			<div class="reservation-container">
 				<article class="reservation-article">
+					<div class="price-per">
+						<span class="price" th:text="'₩' + ${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
+						<span class="per-night"> /박</span>
+					</div>
+
+					<br>
+
 					<div class="date-wrapper">
 						<div class="dateinput" id="dateinput"></div>
 
@@ -70,17 +77,29 @@
 						</div>
 					</div>
 
+					<br>
+
 					<div class="button-wrapper">
 						<button type="submit" class="btn-save">예약하기</button>
 					</div>
 
 					<div class="price-sum">
-						<p>가격(1박기준)</p>
-						<pre th:text="${program.price}"></pre>
+						<!-- Price per night multiplied by number of nights -->
+						<div class="price-detail">
+							<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
+							<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 2, 'POINT')}"></span></span>
+						</div>
 
-						<p>가격(1박기준 * 일수)</p>
-						<pre th:text="${program.price} + ' * 5 = '"></pre>
+						<br><hr><br>
+
+						<!-- Total sum -->
+						<div class="price-detail">
+							<span>총 합계</span>
+							<span class="price-total">₩<span th:text="${#numbers.formatDecimal((program.price * 5) + 143314, 0, 'COMMA', 2, 'POINT')}"></span></span> <!-- Sum of price and fee -->
+						</div>
 					</div>
+
+
 				</article>
 			</div>
 		</div>
@@ -113,80 +132,8 @@
 		</div>
 	</div>
 
-<br><br>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	
-<table>
-		<tr>
-			<th>글번호</th>
-			<td style="width: 80px;" th:text="${program.programNum}"></td>
-			<th>조회수</th>
-			<td style="width: 50px;" th:text="${program.hits}"></td>
-			<th>작성일</th>
-			<td style="width: 150px;" th:text="${program.inputdate}"></td>
-		</tr>
-		<tr>
-			<th>제목</th>
-			<td colspan="3" ></td>
-			<th>작성자</th>
-			<td th:text="${program.userid}"></td>
-		</tr>
-		<tr>
-			<th>내용</th>
-		
-			<td>
-
-			</td>
-		</tr>
-		<tr>
-			<th>시작일</th>
-		
-			<td>
-				<pre th:text="${program.start_date}"></pre>
-			</td>
-		</tr>
-		<tr>
-			<th>마감</th>
-		
-			<td>
-				<pre th:text="${program.end_date}"></pre>
-			</td>
-		</tr>
-			<tr>
-			<th>가격(1박기준)</th>
-		
-			<td>
-				<pre th:text="${program.price}"></pre>
-			</td>
-		</tr>
-		
-	</table>(1:좋아요, 0:좋아요아님)
-	<br><br>
-비회원은 클릭 못하도록 설정
-<br>
-
-<br>
-<form th:action="@{/program/apply}" method="get">
-	날짜선택(달력)
-	<table>
-			<tr>
-			<th>start_date</th>
-			<td>
-				<textarea name="start_date" ></textarea>
-			</td>
-		</tr><tr>
-			<th>end_date</th>
-			<td>
-				<textarea name="end_date" ></textarea>
-			</td>
-		</tr>
-	</table>
-	<input type="hidden" name="programNum" th:value="${program.programNum}">
-
-    <button type="submit">예약하기</button>
-
-</form>
+<br><br><br>
+<!--비회원은 클릭 못하도록 설정-->
 
 </main>
 
