--- a/src/main/resources/templates/board/readForm.html
+++ b/src/main/resources/templates/board/readForm.html
@@ -210,3 +210,25 @@
 </body>
 
 </html>
+
+
+
+
+	날짜선택(달력)
+	<table>
+		<tr>
+			<th>start_date</th>
+			<td>
+				<textarea name="start_date" ></textarea>
+			</td>
+		</tr><tr>
+		<th>end_date</th>
+		<td>
+			<textarea name="end_date" ></textarea>
+		</td>
+	</tr>
+	</table>
+	<input type="hidden" name="programNum" th:value="${program.programNum}">
+
+	<button type="submit">예약하기</button>
+
