--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -57,50 +57,51 @@
 			</div>
 
 			<div class="reservation-container">
-				<article class="reservation-article">
-					<div class="price-per">
-						<span class="price" th:text="'₩' + ${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
-						<span class="per-night"> /박</span>
-					</div>
-
-					<br>
-
-					<div class="date-wrapper">
-						<div class="dateinput" id="dateinput"></div>
-
-						<div>
-							<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+				<form th:action="@{/program/apply}" method="get">
+					<article class="reservation-article">
+						<div class="price-per">
+							<span class="price" th:text="'₩' + ${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
+							<span class="per-night"> /박</span>
 						</div>
 
-						<div>
-							<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
-						</div>
-					</div>
+						<br>
 
-					<br>
+						<div class="date-wrapper">
+							<div class="dateinput" id="dateinput"></div>
 
-					<div class="button-wrapper">
-						<button type="submit" class="btn-save">예약하기</button>
-					</div>
+							<div>
+								<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+							</div>
 
-					<div class="price-sum">
-						<!-- Price per night multiplied by number of nights -->
-						<div class="price-detail">
-							<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
-							<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 2, 'POINT')}"></span></span>
+							<div>
+								<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+							</div>
 						</div>
 
-						<br><hr><br>
+						<br>
 
-						<!-- Total sum -->
-						<div class="price-detail">
-							<span>총 합계</span>
-							<span class="price-total">₩<span th:text="${#numbers.formatDecimal((program.price * 5) + 143314, 0, 'COMMA', 2, 'POINT')}"></span></span> <!-- Sum of price and fee -->
+						<div class="button-wrapper">
+							<button type="submit" class="btn-save">예약하기</button>
+							<input type="hidden" name="programNum" th:value="${program.programNum}">
 						</div>
-					</div>
 
+						<div class="price-sum">
+							<!-- Price per night multiplied by number of nights -->
+							<div class="price-detail">
+								<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
+								<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 2, 'POINT')}"></span></span>
+							</div>
 
-				</article>
+							<br><hr><br>
+
+							<!-- Total sum -->
+							<div class="price-detail">
+								<span>총 합계</span>
+								<span class="price-total">₩<span th:text="${#numbers.formatDecimal((program.price * 5) + 143314, 0, 'COMMA', 2, 'POINT')}"></span></span> <!-- Sum of price and fee -->
+							</div>
+						</div>
+					</article>
+				</form>
 			</div>
 		</div>
 
@@ -132,8 +133,9 @@
 		</div>
 	</div>
 
-<br><br><br>
-<!--비회원은 클릭 못하도록 설정-->
+<br><br>
+
+
 
 </main>
 
