--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -50,9 +50,48 @@
 				<div>
 					<p th:utext="${program.content}"></p>
 				</div>
-		
-				<div>
-					체크 리스트
+
+				<br><hr><br>
+
+				<div class="feature-container">
+					<div class="theme-print">
+						<h3>프로그램 테마</h3>
+						<ul>
+							<li th:if="${programTag.active}">활동적</li>
+							<li th:if="${programTag.creative}">창의적</li>
+							<li th:if="${programTag.healing}">힐링</li>
+							<li th:if="${programTag.traditional}">전통</li>
+							<li th:if="${programTag.cookingExperience}">요리체험</li>
+							<li th:if="${programTag.scenicView}">뷰</li>
+							<li th:if="${programTag.countryside}">시골</li>
+							<li th:if="${programTag.city}">도시</li>
+							<li th:if="${programTag.festival}">축제</li>
+							<li th:if="${programTag.drive}">드라이브</li>
+							<li th:if="${programTag.socializing}">친목</li>
+							<li th:if="${programTag.tranquil}">한적한</li>
+						</ul>
+
+					</div>
+
+					<hr>
+
+					<div class="theme-print">
+						<h3>호스트용 체크리스트</h3>
+						<ul>
+							<li th:if="${programTag.separateBathroom}">화장실과 욕실 분리 여부</li>
+							<li th:if="${programTag.bathtub}">욕조 유무</li>
+							<li th:if="${programTag.wifi}">와이파이 유무</li>
+							<li th:if="${programTag.transformer}">변압기 유무</li>
+							<li th:if="${programTag.pajamasProvided}">파자마(잠옷) 제공 여부</li>
+							<li th:if="${programTag.hairdryer}">헤어드라이기 유무</li>
+							<li th:if="${programTag.basicToiletriesProvided}">기본 세면도구 제공 여부</li>
+							<li th:if="${programTag.petFriendly}">반려동물 동반 가능 여부</li>
+							<li th:if="${programTag.roomAlone}">방 호자 사용</li>
+							<li th:if="${programTag.langJapanese}">일본어 가능</li>
+							<li th:if="${programTag.langEnglish}">영어 가능</li>
+							<li th:if="${programTag.langKorean}">한국어 가능</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 
